<resources>
    <string name="app_name">Quick Memo</string>
    <string name="action_settings">Settings</string>
    <string name="todayButtonString">Today</string>
    <string name="allButtonString">All</string>
    <string name="finishedButtonString">Done</string>
    <string name="newButtonString">New</string>
    <string name="title_activity_create">Create a New Memo</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="titleEditTextString">Enter a title</string>
    <string name="titleTextViewString">Title</string>
    <string name="categoryTextViewString">Category</string>
    <string name="categoryEditTextString">Enter a category</string>
    <string name="descriptionEditTextString">Enter a description</string>
    <string name="descriptionTextViewString">Description</string>
    <string name="submitButtonString">Submit</string>
    <string name="dateTextViewString">Date</string>
    <string name="dateEditTextString">Select a date</string>
</resources>
